02-ext-authz/02-01-go-authz-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis/redis-stack # or just image: redis
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgu-go-ext-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mgu-go-ext-authz
  template:
    metadata:
      labels:
        app: mgu-go-ext-authz
    spec:
      containers:
        - image: mgu/go-authz-ext
          imagePullPolicy: IfNotPresent
          name: ext-authz
          ports:
            - containerPort: 9000
              name: grpc
            - containerPort: 8000
              name: http-authz
---
apiVersion: v1
kind: Service
metadata:
  name: mgu-go-ext-authz
  labels:
    app: mgu-go-ext-authz
spec:
  ports:
    - name: grpc
      port: 9000
      targetPort: 9000
    - name: http-authz
      port: 8000
      targetPort: 8000
  selector:
    app: mgu-go-ext-authz
