02-ext-authz/02-03-sb-application.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mgu
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgudemo-v2
  namespace: mgu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mgudemo
  template:
    metadata:
      labels:
        app: mgudemo
    spec:
      containers:
        - name: mgudemo
          image: afklm/istio-mgu-spring-security-oauth2
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mgudemo
  namespace: mgu
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: mgudemo
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mgudemo-gateway
  namespace: mgu
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mgu
  namespace: mgu
spec:
  hosts:
    - "*"
  gateways:
    - mgudemo-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: mgudemo
            port:
              number: 8080
