02-ext-authz/02-02-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
  # https://istio.io/latest/docs/reference/config/security/authorization-policy/#Rule-To
  action: CUSTOM
  provider:
    # The provider name must match the extension provider defined in the mesh config.
    name: mgu-go-ext-authz-grpc
  rules:
    # The rules specify when to trigger the external authorizer.
    - to:
        - operation:
            paths: ["/*"]
